# BuildingMapGIS

./: .gitignore  AGENTS.md  NOTES.md  README.md  pyproject.toml  pyrightconfig.json
artifacts/: building_132.glb  building_132_method_c.json  building_132_res_comparison.json  building_132_resolution_rounding_comparison.json  building_132_round_comparison.json
scratch/: analyze_building_132.py  analyze_rooftops.py  check_holes.py  check_laz.py  clean_building_132.py  compare_details.py  debug_sa_details.py  find_all_geojson.py  inspect_all_heights.py  inspect_classes.py  inspect_cleaned_footprints.py  inspect_footprints.py  inspect_heights.py  method_a_topojson.py  method_b_trimesh.py  method_c_voxel.py  method_d_healing.py  probe_tile_index.py  test_layer_3d.py  test_load_data.py  test_rooftop.py  test_vsicurl.py  visualize_comparison.py  visualize_comparison_all.py
src/: api_test.py  app.py  import_pointcloud.py  importer.py  main.py  pipeline_cache.py  quality_metrics.py
whiteboxtest/: README.md  combine_glbs.py  view_glb.py  view_outputs.py  wbwbuildingmapping.py  wbwlidar.py
