[project]
name = "buildingmapgis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "overturemaps>=1.0.0",
    "plotly>=6.7.0",
    "pydeck>=0.9.2",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
    "tqdm>=4.67.3",
    "whitebox-workflows>=1.3.5",
]
