[project]
name = "buildingmapgis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "jupyterlab>=4.5.7",
    "laspy>=2.7.0",
    "lazrs>=0.8.1",
    "mapbox-earcut>=2.0.0",
    "matplotlib>=3.10.9",
    "overturemaps>=1.0.0",
    "plotly>=6.7.0",
    "pydeck>=0.9.2",
    "pyglet<2",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
    "topojson>=1.10",
    "tqdm>=4.67.3",
    "trimesh>=4.12.2",
    "whitebox-workflows>=1.3.5",
]
